--- a/antes/Item02/CasaDoCodigo/CasaDoCodigo.MVC.csproj
+++ b/antes/Item02/CasaDoCodigo/CasaDoCodigo.MVC.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <None Include="Areas\Cadastro\Views\Home\Index.cshtml" />
     <None Include="Areas\Carrinho\Views\Home\Index.cshtml" />
+    <None Include="Areas\Carrinho\Views\Home\_NavegacaoCarrinho.cshtml" />
     <None Include="Areas\Identity\Pages\Account\ExternalLogin.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Login.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Logout.cshtml" />
