--- a/antes/Item02/CasaDoCodigo/CasaDoCodigo.MVC.csproj
+++ b/antes/Item02/CasaDoCodigo/CasaDoCodigo.MVC.csproj
@@ -75,6 +75,7 @@
 
   <ItemGroup>
     <None Include="Areas\Cadastro\Views\Home\Index.cshtml" />
+    <None Include="Areas\Cadastro\Views\Home\_NavegacaoCadastro.cshtml" />
     <None Include="Areas\Carrinho\Views\Home\Index.cshtml" />
     <None Include="Areas\Carrinho\Views\Home\_NavegacaoCarrinho.cshtml" />
     <None Include="Areas\Identity\Pages\Account\ExternalLogin.cshtml" />
@@ -88,6 +89,7 @@
     <None Include="Areas\Identity\Pages\_ViewImports.cshtml" />
     <None Include="Areas\Identity\Pages\_ViewStart.cshtml" />
     <None Include="Areas\Pedido\Views\Home\Index.cshtml" />
+    <None Include="Areas\Pedido\Views\Home\_NavegacaoPedido.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
