--- a/antes/Item02/CasaDoCodigo/CasaDoCodigo.MVC.csproj
+++ b/antes/Item02/CasaDoCodigo/CasaDoCodigo.MVC.csproj
@@ -79,6 +79,7 @@
     <None Include="Areas\Carrinho\Views\Home\Index.cshtml" />
     <None Include="Areas\Carrinho\Views\Home\_NavegacaoCarrinho.cshtml" />
     <None Include="Areas\Catalogo\Views\Home\_BuscaProdutos.cshtml" />
+    <None Include="Areas\Catalogo\Views\Home\_ProdutoCard.cshtml" />
     <None Include="Areas\Identity\Pages\Account\ExternalLogin.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Login.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Logout.cshtml" />
